# Nikola-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test  test.cpp
Library Ideas/: __Coordinates.nik
Nikola/: Expressions.md  Functions.md  Library.md  Statements.md  grammar.ebnf
Nikola-Lang/: Grammar.ebnf
Nikola/lib/core/: __MathConstants.nik
Nikolac/: CMakeLists.txt
Nikolac/Syntax-Analysis/: NikolaParser.cpp  NikolaParser.output
Nikolac/Syntax-Analysis/include/: Location.hxx  NikolaLexer.ll  NikolaParser.hxx  NikolaParser.yy
Nikolac/Syntax-Analysis/include/SyntaxTree/: DeclarationNodes.hxx  SyntaxNode.hxx  TypeNode.hxx
Nikolac/include/Driver/: CommandArguments.hpp
Nikolac/include/Parser/: Location.hpp  NikolaLexer.hpp  NikolaLexer.ll  NikolaParser.hpp  NikolaParser.yy  NikolaParserReport.txt
Nikolac/include/Parser/SyntaxTree/: ExpressionNode.hpp  SyntaxNode.hpp  Visitor.hpp
Nikolac/src/Driver/: CommandArguments.cpp
Nikolac/src/Parser/: CMakeLists.txt  NikolaLexer.cpp  NikolaParser.cpp  NikolaParser.output
Nikolac/src/Parser/SyntaxTree/: ExpressionNode.cpp
Standardization Ideas/: Arithmetic Types.md  Expressions.md  __Complex.nik
nikola-language-highlighting/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
nikola-language-highlighting/syntaxes/: nikola.tmLanguage.json
unit-tests/: CMakeLists.txt
unit-tests/Lexer/: CMakeLists.txt  LexerTestUtils.hpp  TestLexFiles.cpp  TestLexIdentifiers.cpp  TestLexKeywords.cpp  TestLexLiterals.cpp  TestLexMultiTokens.cpp  TestLexOperators.cpp  TestLexPunctuators.cpp
unit-tests/Lexer/Test Files/: Test1.nik  TestLexComments.nik
unit-tests/Parser/Parser Files/Declarations/: Function Declaration.txt  Variable Declaration.txt
unit-tests/Parser/Parser Files/Expressions/: Vector Matrix Literals.txt
unit-tests/Parser/Parser Files/Statements/Conditional Statements/: Conditional Statement1.txt  Conditional Statement2.txt  Conditional Statement3.txt  Conditional Statement4.txt  Conditional Statement5.txt  Conditional Statement6.txt  Conditional Statement7.txt
unit-tests/Parser/Parser Files/Statements/Loop Statements/: Do While Loop1.txt  For Loop1.txt  For Loop2.txt  For Loop3.txt  For Loop4.txt  For Loop5.txt  For Loop6.txt  For Loop7.txt  While Loop1.txt  While Loop2.txt
unit-tests/Parser/Parser Files/Statements/Match Statement/: Match Statement1.txt  Match Statement2.txt  Match Statement3.txt  Match Statement4.txt
